# opencrate-bms

./: .gitignore  Cargo.toml  device-profile-schema.json
assets/: style.css
profiles/: ahu-single-duct.json  vav-reheat.json
scenarios/: small-office.json
src/: auth.rs  lib.rs  main.rs  platform.rs
src/bridge/: backoff.rs  bacnet.rs  mod.rs  modbus.rs  traits.rs
src/config/: loader.rs  mod.rs  profile.rs  scenario.rs  template.rs
src/discovery/: bacnet_adapter.rs  bacnet_units.rs  mod.rs  modbus_adapter.rs  model.rs  service.rs
src/event/: bus.rs  mod.rs
src/gui/: app.rs  mod.rs  state.rs
src/gui/components/: alarm_view.rs  audit_log_view.rs  bacnet_device_alarms.rs  bacnet_device_cov.rs  bacnet_device_files.rs  bacnet_device_trends.rs  bacnet_network_tools.rs  building_tree.rs  collapsible.rs  config_view.rs  device_tree.rs  discovery_view.rs  floor_plan.rs  login.rs  mod.rs  modbus_device_diagnostics.rs  modbus_device_registers.rs  point_detail.rs  point_table.rs  programming_view.rs  project_launcher.rs  schedule_view.rs  sidebar.rs  toolbar.rs  trend_chart.rs  user_management.rs  virtual_points_view.rs  write_dialog.rs
src/haystack/: auto_tag.rs  mod.rs  prototypes.rs  provider.rs  tags.rs  validation.rs
src/logic/: compiler.rs  engine.rs  mod.rs  model.rs  store.rs
src/node/: mod.rs
src/plugin/: mod.rs
src/project/: mod.rs
src/protocol/: mod.rs  normalize.rs
src/store/: alarm_store.rs  audit_store.rs  discovery_store.rs  entity_store.rs  history_store.rs  mod.rs  node_store.rs  point_store.rs  schedule_store.rs  user_store.rs
