[package]
name = "opencrate-bms"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dioxus = { version = "0.6", features = ["desktop"], optional = true }
rfd = { version = "0.15", optional = true }
rustbac-core = "0.3"
rustbac-client = "0.3"
rustbac-datalink = "0.3"
rustbac-bacnet-sc = "0.3"
rustmod-core = "0.2"
rustmod-client = "0.2"
rustmod-datalink = "0.2"
rusqlite = { version = "0.33", features = ["bundled"] }

[features]
default = []
desktop = ["dioxus", "rfd"]
